# FastApi-GhitHub-Actions

./: .gitignore  README.md  pyproject.toml  request.http
.github/workflows/: lint-check.yml
app/: crud.py  deps.py  main.py
app/models/: user.py
app/routes/: user.py
app/tests/: conftest.py  test_crud.py  test_user.py
